# sandevistan

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/deckard/: __init__.py  cli.py  config.py
src/sandevistan/: __init__.py  cli.py  config.py
