[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deckard"
version = "0.1.0"
description = "AI agent to analyze Apple crash files"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "google-genai>=0.1.0",
    "click>=8.0.0",
    "tomli-w>=1.0.0",
]
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
deckard = "deckard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
