[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandevistan"
version = "0.1.0"
description = "AI-powered CLI tool to analyze Apple crash files"
authors = [
    {name = "Dil4rd"}
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "google-genai>=0.1.0",
    "click>=8.0.0",
    "tomli-w>=1.0.0",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["crash", "analysis", "apple", "ios", "macos", "ai", "gemini", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/Dil4rd/sandevistan"
Repository = "https://github.com/Dil4rd/sandevistan"
Issues = "https://github.com/Dil4rd/sandevistan/issues"

[project.scripts]
sandy = "sandevistan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
